fix divider custom class error and low z-index

--- a/assets/scss/components/blocks/_divider.scss
+++ b/assets/scss/components/blocks/_divider.scss
@@ -1,4 +1,5 @@
 .mai-divider {
+	z-index: -1;
 	display: block;
 	height: var(--divider-height, calc(4rem + 4vw)) !important;
 	background-color: transparent;
